rearrange main page to exclude instructions

--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -5,3 +5,22 @@
 .attribution a {
   color: #5A95BF;
 }
+
+.post-item {
+  height: 200px;
+}
+.post-thumbnail {
+  width: 200px;
+  float:left;
+}
+.post-rest {
+  margin-left: 230px;
+}
+
+/* Meta data line below post title */
+.post-contributor {
+  display: block;
+  margin-top: -.5rem;
+  margin-bottom: 1rem;
+  color: #9a9a9a;
+}
